@@ -454,6 +454,28 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<!-- https://randoop.github.io/randoop/ -->
+			<!-- mvn clean test -Prandoop -->
+			<id>randoop</id>
+			<build>
+				<plugins>					
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<includes>
+								<include>randoop/**</include>
+							</includes>
+							<argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
+							<argLine>-javaagent:${basedir}/JavaMOPAgent.jar</argLine>
+							<runOrder>alphabetical</runOrder>
+							<testFailureIgnore>true</testFailureIgnore>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
   <description>This is the core Apache Tika™ toolkit library from which all other modules inherit functionality. It also
